correct blur backdrop tailwind's backdrop-blur is not working on mobile. custom css class was added to temporarily solve this issue. should be revered once tailwind fixes this issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.custom-backdrop {
+  -webkit-backdrop-filter: blur(4px);
+  backdrop-filter: blur(4px);
+}
